maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:7: error: ';' expected but 'else' found.
        else {
        ^